// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CiliumNetworkPolicy component supported YAML renders policy preview 1`] = `
<div>
  <h5
    class="gl-mt-3"
  >
    Type
  </h5>
   
  <p
    data-testid="policy-type"
  >
    
    Network
  
  </p>
   
  <policy-info-row-stub
    label="Summary"
  >
    <policy-preview-human-stub
      policydescription="Deny all traffic"
    />
  </policy-info-row-stub>
   
  <div>
    <policy-info-row-stub
      data-testid="description"
      label="Description"
    >
      
      test description
    
    </policy-info-row-stub>
     
    <policy-info-row-stub
      label="Status"
    >
      Not enabled
    </policy-info-row-stub>
     
    <!---->
  </div>
</div>
`;

exports[`CiliumNetworkPolicy component unsupported YAML renders policy preview 1`] = `
<div>
  <h5
    class="gl-mt-3"
  >
    Type
  </h5>
   
  <p
    data-testid="policy-type"
  >
    
    Network
  
  </p>
   
  <policy-info-row-stub
    label="Summary"
  >
    <policy-preview-human-stub />
  </policy-info-row-stub>
   
  <!---->
</div>
`;
